syntax = "proto3";

package inline_oneof;

option go_package = "xgo/tests/pb/pboptions";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

import "tests/proto/module/external.proto";

import "proto/json.proto";

// For test cases inline oneof.
message InlineOneOf1 {
  oneof OneType1 {
    option (json.oneof) = { json: "t_one1"; inline: true };

    int32 f_int32 = 1 [ (json.field) = { json: "t_int32"; } ];
  }

  oneof OneType2 {
    option (json.oneof) = { json: "t_one2"; inline: true };

    int64 f_int64 = 2 [ (json.field) = { json: "t_int64"; } ];
  }

  oneof OneType3 {
    option (json.oneof) = { json: "t_one3"; inline: true };

    uint32 f_uint32 = 3 [ (json.field) = { json: "t_uint32"; } ];
  }

  oneof OneType4 {
    option (json.oneof) = { json: "t_one4"; inline: true };

    uint64 f_uint64 = 4 [ (json.field) = { json: "t_uint64"; } ];
  }

  oneof OneType5 {
    option (json.oneof) = { json: "t_one5"; inline: true };

    sint32 f_sint32 = 5 [ (json.field) = { json: "t_sint32"; } ];
  }

  oneof OneType6 {
    option (json.oneof) = { json: "t_one6"; inline: true };

    sint64 f_sint64 = 6 [ (json.field) = { json: "t_sint64"; } ];
  }

  oneof OneType7 {
    option (json.oneof) = { json: "t_one7"; inline: true };

    sfixed32 f_sfixed32 = 7 [ (json.field) = { json: "t_sfixed32"; } ];
  }

  oneof OneType8 {
    option (json.oneof) = { json: "t_one8"; inline: true };

    sfixed64 f_sfixed64 = 8 [ (json.field) = { json: "t_sfixed64"; } ];
  }

  oneof OneType9 {
    option (json.oneof) = { json: "t_one9"; inline: true };

    fixed32 f_fixed32 = 9 [ (json.field) = { json: "t_fixed32"; } ];
  }

  oneof OneType10 {
    option (json.oneof) = { json: "t_one10"; inline: true };

    fixed64 f_fixed64 = 10 [ (json.field) = { json: "t_fixed64"; } ];
  }

  oneof OneType11 {
    option (json.oneof) = { json: "t_one11"; inline: true };

    float f_float = 11 [ (json.field) = { json: "t_float"; } ];
  }

  oneof OneType12 {
    option (json.oneof) = { json: "t_one12"; inline: true };

    double f_double = 12 [ (json.field) = { json: "t_double"; } ];
  }

  oneof OneType13 {
    option (json.oneof) = { json: "t_one13"; inline: true };

    bool f_bool1 = 21 [ (json.field) = { json: "t_bool1"; } ];
  }

  oneof OneType14 {
    option (json.oneof) = { json: "t_one14"; inline: true };

    string f_string1 = 22 [ (json.field) = { json: "t_string1"; } ];
  }

  oneof OneType15 {
    option (json.oneof) = { json: "t_one15"; inline: true };

    bytes f_bytes1 = 23 [ (json.field) = { json: "t_bytes1"; } ];
  }

  oneof OneType16 {
    option (json.oneof) = { json: "t_one16"; inline: true };

    external.Enum1 f_enum1 = 31 [ (json.field) = { json: "t_enum1"; } ];
  }

  oneof OneType17 {
    option (json.oneof) = { json: "t_one17"; inline: true };

    external.Message1 f_message1 = 32 [ (json.field) = { json: "t_message1"; } ];
  }

  oneof OneType18 {
    option (json.oneof) = { json: "t_one18"; inline: true };

    google.protobuf.Any f_any1 = 41 [ (json.field) = { json: "t_any1"; } ];
  }

  oneof OneType19 {
    option (json.oneof) = { json: "t_one19"; inline: true };

    google.protobuf.Duration f_duration1 = 42 [ (json.field) = { json: "t_duration1"; } ];
  }

  oneof OneType20 {
    option (json.oneof) = { json: "t_one20"; inline: true };

    google.protobuf.Timestamp f_timestamp1 = 43 [ (json.field) = { json: "t_timestamp1"; } ];
  }
}
