syntax = "proto3";

package fixed64;

option go_package = "xgo/tests/pb/pbinvalid";

//import "google/protobuf/any.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/timestamp.proto";
//
//import "tests/proto/module/external.proto";

import "proto/json.proto";

message Fixed6416 {
  fixed64 field16 = 16 [ (json.field) = { format: { enum: { } } } ];
}
