syntax = "proto3";

package uint64;

option go_package = "xgo/tests/pb/pbinvalid";

//import "google/protobuf/any.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/timestamp.proto";
//
//import "tests/proto/module/external.proto";

import "proto/json.proto";

message Uint6417 {
  uint64 field17 = 17 [ (json.field) = { format: { any: { } } } ];
}
